--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 *{
-  font-size: large;
+  font-size: auto;
   font-style: oblique;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
