--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 *{
-  font-size: auto;
   font-style: oblique;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,8 +47,7 @@ p{
   text-indent: 50px;justify-content: center;
 }
 .contenttitle{
-  margin: 20px;
-  padding: 50px;
+  padding: 10px;
   border: 2px solid black;
   border-radius: 30px;
   background-color: rgb(29, 182, 123);
@@ -58,10 +56,9 @@ p{
   font-size: 25px;
 }
 .type{
-  margin: 20px;
+  margin-top: 10px;
   border-radius: 30px;
   border: 2px solid black;
-  padding: 20px;
   background-color: rgb(54, 166, 181);
 }
 .type h4{
@@ -72,22 +69,21 @@ p{
 }
 .t1{
   width: 50%;
-  margin: 10px;
   padding: 15px;
 }
 .t2{
   width: 50%;
-  margin: 10px;
   padding: 15px;
 }
 .container{
+  margin-top: 10px;
   padding: 50px;
-  height: 900px;
-  row-gap: 10px;
-  column-gap: 10px;
+  height: fit-content;
+  row-gap: 8px;
+  column-gap: 8px;
   display: grid;
   grid-template-columns: .8fr .6fr .8fr .8fr;
-  grid-template-rows: 230px 280px 230px;
+  grid-template-rows: .3fr .2fr .3fr;
  background-color: rgb(21, 255, 0);
  justify-content: center;
  align-content: center;
@@ -105,11 +101,6 @@ border: 2px solid black;
   grid-column: 3/4;
   grid-row: 1/3;
 }
-section{
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
 .img5{
   grid-column: 1/3;
 }
@@ -117,43 +108,49 @@ section{
   box-shadow: 2px 2px 2px black;
   opacity: .7;
 }
-.eday img{
-  height: 400px;
-  width: 400px;
-  border: 2px solid black;
-  border-radius: 50px;
-}
 .eday{
   padding: 20px;
   background-color: rgba(7, 192, 7, 0.664);
   text-align: center;
   justify-content: center;
-  display: inline-flex;
+  display: grid;
+  grid-template-columns: .1fr 1fr 1fr;
+  grid-template-rows: .1fr;
   align-items: center;
   border-radius: 50px;
   border: 2px solid black;
 }
+.eday img{
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  border-radius: 50px;
+}
 .eday h2{
   font-size: 25px;
 }
+.edayp{
+  grid-column: 2/6;
+  grid-row: 1/2;
+}
 .recycle{
+  
   margin: 10px;
   padding: 20px;
   background-color: rgb(102, 223, 223);
-  display: inline-flex;
+  display:flex;
+  flex-wrap: wrap;
   border-radius: 50px;
   border: 2px solid black;
-}
-.recycle h2{
-  font-size: 25px;
-}
-.recycle img{
-  border: 2px solid black;
-  border-radius: 50px;
 }
 .process{
-  padding-left: 100px;
-  padding-right: 100px;
+  width: 50%;
+}
+.recycle img{
+  width: 50%;
+  height:auto;
+  border: 2px solid black;
+  border-radius: 50px;
 }
 .climate{
   margin: 10px;
