--- a/assets/style.css
+++ b/assets/style.css
@@ -4,17 +4,20 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: bold;
 }
+p{
+  text-indent: 3%;
+  justify-content: center;
+}
 span{
   text-decoration: underline;
-  font-size: 20px;
+  font-size: 130%;
 }
 .join{
   display: block;
-  margin: 20px;
-  padding: 15px;
+  padding: 1em;
   background-color: rgb(255, 0, 0);
   border: 2px solid black;
-  border-radius: 10px;
+  border-radius: .5em;
   text-align: center;
   overflow: hidden;
   box-shadow: 2px 2px 2px black;
@@ -23,78 +26,77 @@ a{
   text-decoration: none;
 }
 .top{
-  border-radius: 5px;
+  font-size: 80%;
+  padding:1%;
+  border-radius: .5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: blue;
-  height: 150px;
 }
 .top img{
-  border: 2px solid black;
-  border-radius: 10px;
-  margin-left: 15px;
+  height: 10%;
+  width: 25%;
+  border: .1em solid black;
+  border-radius: .5em
 }
 .top ul li{
   display: inline-block;
 }
 .top a{
   color: aqua;
-  padding: 15px;
   text-align: center;
+  padding: .2em;
 }
-p{
-  text-indent: 50px;justify-content: center;
-}
+
 .contenttitle{
-  padding: 10px;
+  padding:2%;
   border: 2px solid black;
-  border-radius: 30px;
+  border-radius: 2em;
   background-color: rgb(29, 182, 123);
 }
 .contenttitle h1{
-  font-size: 25px;
+  font-size: 120%;
 }
 .type{
-  margin-top: 10px;
-  border-radius: 30px;
-  border: 2px solid black;
+  margin-top: 1em;
+  border-radius: 1em;
+  border: .1em solid black;
   background-color: rgb(54, 166, 181);
 }
 .type h4{
-  font-size: 25px;
+  font-size: 120%;
 }
 .type ul{
   display:flex;
 }
 .t1{
   width: 50%;
-  padding: 15px;
+  padding: .5em;
 }
 .t2{
   width: 50%;
-  padding: 15px;
+  padding: .5em;
 }
 .container{
-  margin-top: 10px;
-  padding: 50px;
-  height: fit-content;
-  row-gap: 8px;
-  column-gap: 8px;
+  margin-top: 1%;
+  padding: 3%;
+  row-gap:.5%;
+  column-gap: .5%;
   display: grid;
   grid-template-columns: .8fr .6fr .8fr .8fr;
   grid-template-rows: .3fr .2fr .3fr;
  background-color: rgb(21, 255, 0);
  justify-content: center;
  align-content: center;
- border-radius: 20px;
+ border-radius: 1em;
 
 }
 .container img{
-  border-radius: 8px;
+  border-radius:0.8em;
   width: 100%;
 height: 100%;
-border: 2px solid black;
+border: .1em solid black;
 }
 .img3{
   
@@ -105,101 +107,95 @@ border: 2px solid black;
   grid-column: 1/3;
 }
 .container  img:hover{
-  box-shadow: 2px 2px 2px black;
-  opacity: .7;
+  box-shadow: .1em .1em .1em black;
+  opacity: .9;
 }
 .eday{
-  padding: 20px;
+  padding: 1em;
   background-color: rgba(7, 192, 7, 0.664);
   text-align: center;
-  justify-content: center;
-  display: grid;
-  grid-template-columns: .1fr 1fr 1fr;
-  grid-template-rows: .1fr;
+  display: inline-flex;
   align-items: center;
-  border-radius: 50px;
-  border: 2px solid black;
+  border-radius: 1em;
+  border: .1em solid black;
 }
 .eday img{
-  width: 200px;
-  height: 200px;
-  border: 2px solid black;
-  border-radius: 50px;
+  width: 70%;
+  height: 70%;
+  border: .1em solid black;
+  border-radius: 1em;
 }
 .eday h2{
-  font-size: 25px;
-}
-.edayp{
-  grid-column: 2/6;
-  grid-row: 1/2;
+  font-size: 120%;
 }
 .recycle{
-  
-  margin: 10px;
-  padding: 20px;
+  width: 100%;
+  align-content: center;
+  overflow-x: scroll;
+  margin-top: .2em;
+  padding: .2em;
   background-color: rgb(102, 223, 223);
-  display:flex;
-  flex-wrap: wrap;
-  border-radius: 50px;
+  display:inline-flex;
+  border-radius: 1em;
   border: 2px solid black;
+  align-items: center;
 }
-.process{
-  width: 50%;
+
+.process p{
+  font-size:100%;
 }
 .recycle img{
-  width: 50%;
-  height:auto;
   border: 2px solid black;
-  border-radius: 50px;
+  border-radius: 1.5em;
 }
 .climate{
-  margin: 10px;
+  margin: 1%;
   text-align: center;
   display: flex;
   align-items: center;
   border: 2px solid black;
-  border-radius: 50px;
+  border-radius: 1.5em;
   background-color: rgba(178, 248, 1, 0.621);
-  padding: 20px;
+  padding: 1%;
 }
 .climate h2{
-  font-size: 25px;
+  font-size: 110%;
 }
 .climate img {  
-  border-radius: 50px;
-  width: 400px;
-  height: 400px;
+  border-radius: 1em;
+  width: 50%;
+  height: 50%;
   border: 2px solid black;
 }
 .efficient {
-  padding: 15px;
+  padding: 1%;
   display: inline-flex;
 }
 .efficient h2{
-  font-size: 25px;
+  font-size: 111%;
   text-align: center;
 }
 .effects{
   background-color: rgba(172, 6, 228, 0.544);
   margin: 5px;
   width: 50%;
-  padding: 15px;
-  border: 2px solid black;
-  margin: 2px;
-  border-radius: 50px;
+  padding: 1%;
+  border: .1em solid black;
+  margin: 1%;
+  border-radius: 1.5em;
 }
 .whyrecycle{
   background-color: rgba(245, 166, 9, 0.738);
-  margin: 5px;
+  margin: 1%;
   width: 50%;
-  padding: 15px ;
-  border: 2px solid black;
-  border-radius: 50px;
+  padding: 1% ;
+  border: .1em solid black;
+  border-radius: 1.5rem;
 }
 footer{
-  border-radius: 10px;
+  border-radius: .5em;
   display:flex;
-  margin: 5px;
+  margin: 1%;
   background-color: rgb(0, 60, 255);
   justify-content: space-between;
 }
@@ -208,12 +204,12 @@ footer a{
   color: rgb(255, 255, 255);
 }
 .list{
-  padding: 10px;
+  padding: 1%;
   width: 33%;
-  margin: 10px;
+  margin: 1%;
 }
 footer li{
-  padding: 10px
+  padding: 5%;
 }
 footer button{
   background-color: brown;
